<resources>
    <string name="app_name">GItHubApiExample</string>
    <string name="author_commit">Author Commits</string>
    <string name="no_data">There is no data!</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="read_more">Read more</string>
    <string name="loading">Loading</string>
    <string name="please_wait">Please wait...!</string>
    <string name="author">Author:</string>
    <string name="commit">Commit:</string>
    <string name="date">Date:</string>
    <string name="message">Message:</string>
    <string name="url">Url:</string>
    <string name="no_internet_msg">No internet connection!\nLet turn on your internet!</string>
</resources>