<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderText"
                android:text="@string/commit" />

            <TextView
                android:id="@+id/tvSHA"
                style="@style/HeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderText"
                android:text="@string/date" />

            <TextView
                android:id="@+id/tvCommitDate"
                style="@style/ContentText"
                android:layout_marginStart="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderText"
                android:text="@string/message" />

            <TextView
                android:id="@+id/tvMessage"
                style="@style/ContentText"
                android:layout_marginStart="5dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderText"
                android:text="@string/url" />

            <TextView
                android:id="@+id/tvUrl"
                style="@style/ContentText"
                android:layout_marginStart="5dp"
                android:autoLink="web" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="fitXY" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderText"
                    android:text="@string/author" />

                <TextView
                    android:id="@+id/tvAuthor"
                    style="@style/HeaderText" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btAuthorCommit"
                style="@style/Button"
                android:text="@string/author_commit" />

            <Button
                android:id="@+id/btClose"
                style="@style/TransparentButton"
                android:layout_marginStart="20dp"
                android:text="@string/close" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>