<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/ll_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/shape_dialog_bg"
        android:gravity="center_horizontal"
        android:minWidth="320dp"
        android:minHeight="180dp"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingTop="30dp"
        android:paddingEnd="25dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/tv_title_dialog"
            style="@style/HeaderText"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:text="title" />

        <LinearLayout
            android:id="@+id/ll_content_dialog"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:indeterminateTint="@color/progress_bar"
                android:visibility="gone"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/tv_message"
                style="@style/ContentText"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="16sp"
                tools:text="this is a test message" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_button_action"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/tv_positive"
                style="@style/Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ok"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/tv_negative"
                style="@style/NegativeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/cancel"
                android:visibility="gone"
                tools:visibility="visible" />

            <Button
                android:id="@+id/tv_neutral"
                style="@style/NegativeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/close"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>